<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/task_text"
        android:minHeight="200dp"
        android:padding="16dp"
        android:background="@drawable/edit_text_background"
        android:textColorHint="@color/dark_purple"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:maxLines="10"
        android:gravity="top|start"
        android:overScrollMode="ifContentScrolls"

        android:focusable="true"
        android:focusableInTouchMode="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp" />


    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:hint="@string/data_text"
        android:padding="16dp"
        android:background="@drawable/date_background"
        android:textColorHint="@color/dark_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_spinner_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:popupBackground="@drawable/rounded_spinner_dropdown"
        android:spinnerMode="dropdown"
        android:dropDownVerticalOffset="8dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date"/>
    <Button
        android:id="@+id/save_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/dark_purple"
        android:text="@string/save_task"
        android:textColor="@color/gray"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_spinner"
        app:layout_constraintVertical_bias="0.08" />

</androidx.constraintlayout.widget.ConstraintLayout>
